--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "express": "^4.18.1",
+    "react-beautiful-dnd": "^13.1.0",
     "sass": "^1.51.0"
   },
   "devDependencies": {
